--- a/src/components/Bar.module.css
+++ b/src/components/Bar.module.css
@@ -1,5 +1,5 @@
 .bar {
-  backgroundcolor: blue !important;
+  /* backgroundcolor: blue !important; */
   border-right: 1px solid #fff;
   transition: transform 0.5s;
 }
