--- a/src/components/bars/Bar.module.css
+++ b/src/components/bars/Bar.module.css
@@ -3,5 +3,5 @@
   border-top: 1px solid #fff;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
-  transition: transform 200ms;
+  transition: transform 200ms, margin 200ms;
 }
